# project_async

./: .gitignore  LICENSE  Makefile  README.md  cli.py  conversion.py  docker-compose.yaml  pyproject.toml  script_csv.py
app/: envio.py
ops/: Dockerfile
ops/script/: create_mock_csv.py
src/: cli.py
src/app/: conversion.py  envio.py
