[project]
name = "csv-converter"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "typer>=0.12",
]

[project.scripts]
# CLI command: csv-pipeline
csv-pipeline = "cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
